--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </div>
   </nav>
 
+<div class="background">
   <div class="container">
 
     <div class="content-area row">
@@ -84,6 +85,7 @@
     </div>
 
   </div><!-- /.container -->
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
