--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="col-md-2 col-xs-2 col-lg-2 col-sm-2"></div>
 
       <div class="col-md-8 col-xs-8 col-lg-8 col-sm-8">
-        <h2>ToDo List</h2>
+        <h2 class="font">ToDo List</h2>
 
         <div class="row input-area">
           <div class="col-md-1"></div>
